--- a/src/app/lista/formulario/formulario.component.html
+++ b/src/app/lista/formulario/formulario.component.html
@@ -1,3 +1,6 @@
-<p>
-  formulario works!
-</p>
+<form>
+	<div class="form-group">
+		<input type="text" name="prod" #productoInput class="form-control">
+	</div>
+	<button class="btn btn-success btn-block" (click)="agregarProducto(productoInput)">Agregar</button>
+</form>
