--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -1,3 +1,10 @@
-<div *ngFor="let item of lista">
-	<app-item [producto]="item"></app-item>
+<div class="panel panel-primary col-sm-12">
+	<div class="panel-heading">
+		<h1>Lista de productos</h1>
+	</div>
+	<div class="panel-bosy">
+		<app-formulario></app-formulario>
+		<div *ngFor="let item of lista"></div>
+		<app-item [producto]="item"></app-item>
+	</div>
 </div>
