--- a/src/app/lista/lista.component.html
+++ b/src/app/lista/lista.component.html
@@ -2,7 +2,7 @@
 	<div class="panel-heading">
 		<h1>Lista de productos</h1>
 	</div>
-	<div class="panel-bosy">
+	<div class="panel-body">
 		<app-formulario></app-formulario>
 		<div *ngFor="let item of lista"></div>
 		<app-item [producto]="item"></app-item>
